# Aibasket_demo

./: .env.example  .gitignore  README.md  build.sh  implementation_detail.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py  models.py  routes.py
data/: products.json
engine/: filter.py  intent.py  ranker.py  upsell.py
frontend/: index.html  package-lock.json  package.json
frontend/data/: products.json
frontend/src/: App.vue  api.js  engine.js  style.css
frontend/src/components/: BasketPanel.vue  CheckoutScreen.vue  ClarificationStep.vue  IntentSelector.vue  ProductCards.vue  UpsellPrompt.vue
llm/: openai_client.py  simulated.py
llm/prompts/: recommend.yaml
models/: schemas.py
tests/: test_api.py
